kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  dnsPolicy: "Default"
  selector:
    service: postgres
  type: ClusterIP
  ports:
  - port: 5432
