kubernetes/vue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vue
  labels:
    service: vue
spec:
  dnsPolicy: "Default"
  selector:
    app: vue
  ports:
  - port: 8080
    targetPort: 8080
